--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,49 @@ img,
 video {
   display: block;
 }
+body {
+  display: flex;
+  width: 1728px;
+  height: 1117px;
+  padding: 50px 1542px 1029px 50px;
+  align-items: center;
+}
+
+.button {
+  display: flex;
+  padding: 10px 20px;
+  align-items: center;
+  gap: 10px;
+  color: #f00;
+  border-radius: 19px;
+  border: 2px solid #f00;
+}
+
+.button.is-active {
+  background-color: #f00;
+  color: white;
+}
+.icon {
+  font-family: "Font Awesome 6 Free";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.like {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 18px;
+}
+.number {
+  color: #000;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.number.is-active {
+  color: white;
+}
+
+// A finir (metre les animation js et nombre qui augmentent )
